# litephreeqc

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt
.devcontainer/: Dockerfile
.github/workflows/: cmake.yml
app/: CMakeLists.txt  ipqEngine.cpp  ipqMain.cpp  testEngine.pqi
litephreeqc/: CMakeLists.txt  LICENSE.txt
litephreeqc/include/: PhreeqcEngine.hpp  PhreeqcKnobs.hpp  PhreeqcMatrix.hpp  PhreeqcRunner.hpp
litephreeqc/src/: Engine.cpp  Knobs.cpp  Runner.cpp
litephreeqc/src/PhreeqcMatrix/: Access.cpp  Ctor.cpp  Init.cpp  Misc.cpp
litephreeqc/src/Wrapper/: EquilibriumCompWrapper.cpp  EquilibriumWrapper.cpp  EquilibriumWrapper.hpp  ExchangeCompWrapper.cpp  ExchangeWrapper.cpp  ExchangeWrapper.hpp  KineticCompWrapper.cpp  KineticWrapper.cpp  KineticWrapper.hpp  SolutionWrapper.cpp  SolutionWrapper.hpp  SurfaceChargeWrapper.cpp  SurfaceCompWrapper.cpp  SurfaceWrapper.cpp  SurfaceWrapper.hpp  WrapperBase.hpp
litephreeqc/test/: IPhreeqcReader.cpp  IPhreeqcReader.hpp  barite_het.pqi  dolo.pqi  testGolemRunner.cpp  testInput.hpp.in  testPhreeqcEngine.cpp  testPhreeqcKnobs.cpp  testPhreeqcMatrix.cpp  testPhreeqcRunner.cpp  utils.cpp  utils.hpp
phreeqc3-examples/: ex14.out  ex22.out  ex6.out  ex8.out  ex8.sel
poet/: CMakeLists.txt
poet/include/: IPhreeqcPOET.hpp  KineticWrapper.hpp  POETInit.hpp  PhreeqcEngine.hpp  PhreeqcInit.hpp  PhreeqcKnobs.hpp  PhreeqcMatrix.hpp  PhreeqcRunner.hpp  PhreeqcSelectedOutputParser.hpp  WrapperBase.hpp
poet/src/: Engine.cpp  EquilibriumCompWrapper.cpp  EquilibriumWrapper.cpp  ExchangeWrapper.cpp  Extraction.cpp  GetSet.cpp  IPhreeqcPOET.cpp  Init.cpp  InitGetSet.cpp  KineticCompWrapper.cpp  KineticWrapper.cpp  Knobs.cpp  Runner.cpp  SelectedOutputParser.cpp  SolutionWrapper.cpp  SurfaceWrapper.cpp
poet/src/PhreeqcMatrix/: Access.cpp  Ctor.cpp  Init.cpp  Misc.cpp
poet/src/Wrapper/: EquilibriumCompWrapper.cpp  EquilibriumWrapper.cpp  EquilibriumWrapper.hpp  ExchangeCompWrapper.cpp  ExchangeWrapper.hpp  KineticCompWrapper.cpp  SolutionWrapper.cpp  SolutionWrapper.hpp  SurfaceChargeWrapper.cpp  SurfaceCompWrapper.cpp  SurfaceWrapper.hpp
poet/test/: CMakeLists.txt  IPhreeqcReader.cpp  run_kin_cor_end2.pqi  testGetters.cpp  testGolemRunner.cpp  testInput.hpp.in  testPhreeqcEngine.cpp  testPhreeqcKnobs.cpp  testPhreeqcMatrix.cpp  testPhreeqcMatrix.hpp.in  testPhreeqcRunner.cpp  utils.cpp
src/: IPhreeqc.cpp  IPhreeqc.hpp
src/phreeqcpp/: Exchange.cxx  Exchange.h  GFZ.cpp  PBasic.cpp  PPassemblage.cxx  PPassemblage.h  Phreeqc.h  Solution.cxx  Solution.h  SolutionIsotope.h  Surface.cxx  Surface.h  basicsubs.cpp  cxxKinetics.cxx  cxxKinetics.h  global_structures.h  kinetics.cpp  litephreeqc_funcs.cpp  mainsubs.cpp  model.cpp  prep.cpp  read.cpp  step.cpp  transport.cpp  utilities.cpp
src/phreeqcpp/PhreeqcKeywords/: Keywords.cpp  Keywords.h
